[gd_scene load_steps=4 format=3 uid="uid://7glfvwlvbq0j"]

[ext_resource type="Script" uid="uid://dwcw13a05kskh" path="res://src/scenes/dialog/mission_item.gd" id="1_401fr"]
[ext_resource type="Theme" uid="uid://okeq2d56howe" path="res://theme/common.tres" id="1_ev0u3"]
[ext_resource type="PackedScene" uid="uid://basbhh486p56t" path="res://src/scenes/dialog/mission_phase.tscn" id="3_5yxcw"]

[node name="MissionItem" type="PanelContainer"]
custom_minimum_size = Vector2(240, 0)
script = ExtResource("1_401fr")

[node name="OneMissionContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MissionName" type="Control" parent="OneMissionContainer"]
custom_minimum_size = Vector2(0, 46)
layout_mode = 2

[node name="Label" type="Label" parent="OneMissionContainer/MissionName"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -23.0
offset_right = 150.0
offset_bottom = 19.0
grow_vertical = 2
theme = ExtResource("1_ev0u3")
text = "弟弟的糖果"

[node name="PhaseContainer" type="VBoxContainer" parent="OneMissionContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="MissionPhase" parent="OneMissionContainer/PhaseContainer" instance=ExtResource("3_5yxcw")]
layout_mode = 2
